--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-A collection of scripts I regularly use. Some homebrew, the remainder from places such as pentest monkey.
+This repo is a collection of scripts I regularly use, either homebrewed or from other sources.
