--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This repo is a collection of scripts I regularly use, either homebrewed or from other sources.
+This repo contains scripts that I regularly use, or one off scripts that I've created for things such as CTFs
